@@ -86,8 +86,13 @@ dependencies {
 //   https://docs.gradle.org/7.1/userguide/validation_problems.html#implicit_dependency for more
 //   details about this problem.
 generateGitProperties.dependsOn(":installGitHooks")
+def resolvedGitDir = providers.exec {
+  workingDir = rootProject.projectDir
+  commandLine("git", "rev-parse", "--absolute-git-dir")
+}.standardOutput.asText.map { rootProject.file(it.trim()) }
+
 gitProperties {
-  dotGitDirectory = project.rootProject.layout.projectDirectory.dir(".git")
+  dotGitDirectory.set(rootProject.layout.dir(resolvedGitDir))
 }
 
 jar {
@@ -288,42 +293,6 @@ tasks.register("allResourceLeakTests", Test) {
     includeTestsMatching("org.checkerframework.checker.test.junit.ResourceLeak*")
     includeTestsMatching("org.checkerframework.checker.test.junit.MustCall*")
   }
-}
-
-// These are tests that should only be run with JDK 11+.
-tasks.register("jtregJdk11Tests", Exec) {
-  description = "Run the jtreg tests made for JDK 11+."
-  group = "Verification"
-  dependsOn("compileJava")
-  dependsOn("compileTestJava")
-  dependsOn("shadowJar")
-
-  String jtregOutput = "${buildDir}/jtregJdk11"
-  String name = "all"
-  executable = "jtreg"
-  args = [
-    "-dir:${projectDir}/jtregJdk11",
-    "-workDir:${jtregOutput}/${name}/work",
-    "-reportDir:${jtregOutput}/${name}/report",
-    "-verbose:summary",
-    "-javacoptions:-g",
-    "-keywords:!ignore",
-    "-samevm",
-    "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-    "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-    "-javacoptions:-classpath ${sourceSets.testannotations.output.asPath}",
-    // Location of jtreg tests
-    "."
-  ]
 }
 
 // JSpecify tests are excluded by default.  To run them:
@@ -873,6 +842,8 @@ tasks.register("ainferTest") {
 // Whole-program inference tests
 //
 
+// Currently skipped because dljc is not maintained.
+
 // This is run as part of the inferenceTests task.
 // File checker/tests/wpi-many/testin.txt lists the tests that are run.  To
 // debug one WPI test, comment out all but one line of that file.
@@ -951,8 +922,8 @@ tasks.register("wpiManyTest", Exec) {
         println("======== end of contents of ${filename} ========")
       }
       // If any of these files are present, their contents should be an error
-      // message that might indicate what went wrong. Even their presenence,
-      // however, is intereseting (even if they are empty).
+      // message that might indicate what went wrong. Even their presence,
+      // however, is interesting (even if they are empty).
       def cannotRunWpiFiles = fileTree(typecheckFilesDir).matching {
         include("**/.cannot-run-wpi")
       }
